[gd_scene load_steps=16 format=3 uid="uid://ba7trey8luw8y"]

[ext_resource type="Script" path="res://Scripts/backpack.gd" id="1_rtsw1"]
[ext_resource type="Texture2D" uid="uid://ud3svasexgj7" path="res://Assets/sprites/UI/bagdark.png" id="2_iy6p1"]
[ext_resource type="Texture2D" uid="uid://c5ptgkq2hlvla" path="res://Assets/sprites/UI/Bag Background.png" id="3_8ruc8"]
[ext_resource type="Script" path="res://Scripts/inventory_slot.gd" id="4_30ur6"]
[ext_resource type="Texture2D" uid="uid://cpfqsu114bbul" path="res://Assets/sprites/UI/XButton.png" id="4_asqch"]
[ext_resource type="Theme" uid="uid://c58omhf8eve5i" path="res://UI_Theme.tres" id="5_lgjj7"]
[ext_resource type="Texture2D" uid="uid://b0ua4bnd2wibm" path="res://Assets/sprites/UI/Resize_Button.png" id="5_maotn"]
[ext_resource type="Texture2D" uid="uid://cbbhqyk42xrmb" path="res://Assets/sprites/UI/platedark.png" id="6_v8dv6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8v2wp"]
texture = ExtResource("2_iy6p1")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ok5o0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_disle"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_48q03"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d2ri7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2klv4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yfb0b"]

[node name="Backpack" type="Panel"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1152.0
offset_top = -648.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_rtsw1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -408.0
offset_top = -417.0
offset_right = 3222.0
offset_bottom = 3163.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.11, 0.117)
pivot_offset = Vector2(7.5, 0)
theme_override_styles/panel = SubResource("StyleBoxTexture_8v2wp")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 475
theme_override_constants/margin_top = 625
theme_override_constants/margin_right = 475
theme_override_constants/margin_bottom = 275

[node name="InventorySlots" type="GridContainer" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 30
columns = 5

[node name="1" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")
Item_Type = 8

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/1"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.014
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -346.554
offset_bottom = -298.854
scale = Vector2(2.62, 2.62)

[node name="2" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.014
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -346.554
offset_bottom = -298.854
scale = Vector2(2.62, 2.62)

[node name="3" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -339.386
offset_bottom = -298.854
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.62, 2.62)

[node name="4" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -339.386
offset_bottom = -298.854
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.62, 2.62)

[node name="5" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -339.386
offset_bottom = -298.854
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.62, 2.62)

[node name="6" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/6"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.014
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -346.554
offset_bottom = -298.854
scale = Vector2(2.62, 2.62)

[node name="7" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/7"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.014
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -346.554
offset_bottom = -298.854
scale = Vector2(2.62, 2.62)

[node name="8" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -339.386
offset_bottom = -298.854
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.62, 2.62)

[node name="9" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/9"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.014
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -346.554
offset_bottom = -298.854
scale = Vector2(2.62, 2.62)

[node name="10" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/10"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.014
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -346.554
offset_bottom = -298.854
scale = Vector2(2.62, 2.62)

[node name="11" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/11"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -339.386
offset_bottom = -298.854
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.62, 2.62)

[node name="12" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/12"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.014
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -346.554
offset_bottom = -298.854
scale = Vector2(2.62, 2.62)

[node name="13" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/13"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -339.386
offset_bottom = -298.854
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.62, 2.62)

[node name="14" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/14"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -339.386
offset_bottom = -298.854
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.62, 2.62)

[node name="15" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/15"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -339.386
offset_bottom = -298.854
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.62, 2.62)

[node name="16" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/16"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -339.386
offset_bottom = -298.854
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.62, 2.62)

[node name="17" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/17"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -339.386
offset_bottom = -298.854
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.62, 2.62)

[node name="18" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/18"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -339.386
offset_bottom = -298.854
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.62, 2.62)

[node name="19" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/19"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -339.386
offset_bottom = -298.854
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.62, 2.62)

[node name="20" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/20"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.014
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -346.554
offset_bottom = -298.854
scale = Vector2(2.62, 2.62)

[node name="21" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/21"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -339.386
offset_bottom = -298.854
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.62, 2.62)

[node name="22" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/22"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -339.386
offset_bottom = -298.854
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.62, 2.62)

[node name="23" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/23"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -339.386
offset_bottom = -298.854
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.62, 2.62)

[node name="24" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/24"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -339.386
offset_bottom = -298.854
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.62, 2.62)

[node name="25" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots"]
layout_mode = 2
mouse_filter = 0
texture = ExtResource("3_8ruc8")
script = ExtResource("4_30ur6")

[node name="item_sprite" type="TextureRect" parent="PanelContainer/MarginContainer/InventorySlots/25"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.385
offset_top = 85.145
offset_right = -339.386
offset_bottom = -298.854
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.62, 2.62)

[node name="Exit Bag" type="Button" parent="."]
layout_mode = 2
offset_left = -50.0
offset_top = -408.0
offset_right = 6.00003
offset_bottom = -352.0
scale = Vector2(0.72, 0.72)
mouse_filter = 1
theme_override_colors/icon_pressed_color = Color(0.881937, 0.881937, 0.881937, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_ok5o0")
icon = ExtResource("4_asqch")
flat = true
icon_alignment = 2
vertical_icon_alignment = 0

[node name="Resize Bag" type="Button" parent="."]
layout_mode = 2
offset_left = -393.0
offset_top = -408.0
offset_right = -337.0
offset_bottom = -352.0
scale = Vector2(0.72, 0.72)
mouse_filter = 1
theme_override_styles/focus = SubResource("StyleBoxEmpty_disle")
action_mode = 0
icon = ExtResource("5_maotn")
flat = true
icon_alignment = 2
vertical_icon_alignment = 0

[node name="Title Plate" type="Button" parent="."]
layout_mode = 0
offset_left = -333.0
offset_top = -446.0
offset_right = -69.0
offset_bottom = -374.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_48q03")
theme_override_styles/hover = SubResource("StyleBoxEmpty_d2ri7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2klv4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yfb0b")
icon = ExtResource("6_v8dv6")

[node name="Title Text" type="Label" parent="."]
layout_mode = 0
offset_left = -306.0
offset_top = -430.0
offset_right = -95.0
offset_bottom = -396.0
theme = ExtResource("5_lgjj7")
text = "Backpack"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="PanelContainer" to="." method="_on_panel_container_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer" to="." method="_on_panel_container_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/1" to="PanelContainer/MarginContainer/InventorySlots/1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/1" to="PanelContainer/MarginContainer/InventorySlots/1" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/2" to="PanelContainer/MarginContainer/InventorySlots/2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/2" to="PanelContainer/MarginContainer/InventorySlots/2" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/3" to="PanelContainer/MarginContainer/InventorySlots/3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/3" to="PanelContainer/MarginContainer/InventorySlots/3" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/4" to="PanelContainer/MarginContainer/InventorySlots/4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/4" to="PanelContainer/MarginContainer/InventorySlots/4" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/5" to="PanelContainer/MarginContainer/InventorySlots/5" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/5" to="PanelContainer/MarginContainer/InventorySlots/5" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/6" to="PanelContainer/MarginContainer/InventorySlots/6" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/6" to="PanelContainer/MarginContainer/InventorySlots/6" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/7" to="PanelContainer/MarginContainer/InventorySlots/7" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/7" to="PanelContainer/MarginContainer/InventorySlots/7" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/8" to="PanelContainer/MarginContainer/InventorySlots/8" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/8" to="PanelContainer/MarginContainer/InventorySlots/8" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/9" to="PanelContainer/MarginContainer/InventorySlots/9" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/9" to="PanelContainer/MarginContainer/InventorySlots/9" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/10" to="PanelContainer/MarginContainer/InventorySlots/10" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/10" to="PanelContainer/MarginContainer/InventorySlots/10" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/11" to="PanelContainer/MarginContainer/InventorySlots/11" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/11" to="PanelContainer/MarginContainer/InventorySlots/11" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/12" to="PanelContainer/MarginContainer/InventorySlots/12" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/12" to="PanelContainer/MarginContainer/InventorySlots/12" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/13" to="PanelContainer/MarginContainer/InventorySlots/13" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/13" to="PanelContainer/MarginContainer/InventorySlots/13" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/14" to="PanelContainer/MarginContainer/InventorySlots/14" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/14" to="PanelContainer/MarginContainer/InventorySlots/14" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/15" to="PanelContainer/MarginContainer/InventorySlots/15" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/15" to="PanelContainer/MarginContainer/InventorySlots/15" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/16" to="PanelContainer/MarginContainer/InventorySlots/16" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/16" to="PanelContainer/MarginContainer/InventorySlots/16" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/17" to="PanelContainer/MarginContainer/InventorySlots/17" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/17" to="PanelContainer/MarginContainer/InventorySlots/17" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/18" to="PanelContainer/MarginContainer/InventorySlots/18" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/18" to="PanelContainer/MarginContainer/InventorySlots/18" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/19" to="PanelContainer/MarginContainer/InventorySlots/19" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/19" to="PanelContainer/MarginContainer/InventorySlots/19" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/20" to="PanelContainer/MarginContainer/InventorySlots/20" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/20" to="PanelContainer/MarginContainer/InventorySlots/20" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/21" to="PanelContainer/MarginContainer/InventorySlots/21" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/21" to="PanelContainer/MarginContainer/InventorySlots/21" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/22" to="PanelContainer/MarginContainer/InventorySlots/22" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/22" to="PanelContainer/MarginContainer/InventorySlots/22" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/23" to="PanelContainer/MarginContainer/InventorySlots/23" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/23" to="PanelContainer/MarginContainer/InventorySlots/23" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/24" to="PanelContainer/MarginContainer/InventorySlots/24" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/24" to="PanelContainer/MarginContainer/InventorySlots/24" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer/MarginContainer/InventorySlots/25" to="PanelContainer/MarginContainer/InventorySlots/25" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/MarginContainer/InventorySlots/25" to="PanelContainer/MarginContainer/InventorySlots/25" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Exit Bag" to="." method="_on_exit_bag_mouse_entered"]
[connection signal="mouse_exited" from="Exit Bag" to="." method="_on_exit_bag_mouse_exited"]
[connection signal="pressed" from="Exit Bag" to="." method="_on_exit_bag_pressed"]
[connection signal="button_down" from="Resize Bag" to="." method="_on_resize_bag_button_down"]
[connection signal="button_up" from="Resize Bag" to="." method="_on_resize_bag_button_up"]
[connection signal="mouse_entered" from="Resize Bag" to="." method="_on_resize_bag_mouse_entered"]
[connection signal="mouse_exited" from="Resize Bag" to="." method="_on_resize_bag_mouse_exited"]
[connection signal="pressed" from="Resize Bag" to="." method="_on_resize_bag_pressed"]
[connection signal="button_down" from="Title Plate" to="." method="_on_title_plate_button_down"]
[connection signal="button_down" from="Title Plate" to="." method="_on_top_plate_button_button_down"]
[connection signal="button_up" from="Title Plate" to="." method="_on_title_plate_button_up"]
[connection signal="mouse_entered" from="Title Plate" to="." method="_on_title_plate_mouse_entered"]
[connection signal="mouse_exited" from="Title Plate" to="." method="_on_title_plate_mouse_exited"]
